@@ -1,3 +1,9 @@
+2023-12-24T20:08:47Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7316621249 # 4393
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--doublecmd-stats/commits?branch=master&time_zone=utc&until=2023-12-24
+* notice: query file size: 24315
+* notice: accum prev / next / diff: re vi: 0 225 / 0 227 / +0 +2
+
 2023-12-24T08:10:31Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7313409758 # 4390
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--doublecmd-stats/commits?branch=master&time_zone=utc&until=2023-12-24
